Add pics for papers.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,7 +16,9 @@
   articleno  = {125},
   numpages   = {20},
   keywords   = {lattice Boltzmann method, turbulent flow simulation, fluid-solid coupling, virtual wind tunnel},
-  selected   = {true}
+  selected   = {true},
+  abbr       = {SIGGRAPH},
+  preview    = {10.1145_3592394.jpg}
 }
 
 @article{10.1145/3478513.3480493,
@@ -37,5 +39,7 @@
   articleno  = {201},
   numpages   = {18},
   keywords   = {Lattice Boltzmann method, fluid-solid coupling, turbulent flow simulation},
-  selected   = {true}
+  selected   = {true},
+  abbr       = {SIGGRAPH Asia},
+  preview    = {10.1145_3478513_3480493.jpg}
 }
