Add more info in publications.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,7 +18,9 @@
   keywords   = {lattice Boltzmann method, turbulent flow simulation, fluid-solid coupling, virtual wind tunnel},
   selected   = {true},
   abbr       = {SIGGRAPH},
-  preview    = {10.1145_3592394.jpg}
+  preview    = {10.1145_3592394.jpg},
+  award      = {Video clips of the paper were selected in [SIGGRAPH 2023 Technical Papers Trailer](https://www.youtube.com/watch?v=VBZ2sDxvZQE). Teaser image of the paper was selected as the cover image of [ACM Transactions on Graphics, Volume 42, Issue 4](https://dl.acm.org/toc/tog/2023/42/4).},
+  award_name = {Selected in Technical Papers Trailer and Journal Cover}
 }
 
 @article{10.1145/3478513.3480493,
@@ -41,5 +43,7 @@
   keywords   = {Lattice Boltzmann method, fluid-solid coupling, turbulent flow simulation},
   selected   = {true},
   abbr       = {SIGGRAPH Asia},
-  preview    = {10.1145_3478513_3480493.jpg}
+  preview    = {10.1145_3478513_3480493.jpg},
+  award      = {Video clips of the paper were selected in [SIGGRAPH Asia 2021 Technical Papers Trailer](https://www.youtube.com/watch?v=tXBKYMjbH1k).},
+  award_name = {Selected in Technical Papers Trailer}
 }
