--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,7 +20,7 @@
   abbr       = {SIGGRAPH},
   preview    = {10.1145_3592394.jpg},
   award      = {Video clips of the paper were selected in [SIGGRAPH 2023 Technical Papers Trailer](https://www.youtube.com/watch?v=VBZ2sDxvZQE). Teaser image of the paper was selected as the cover image of [ACM Transactions on Graphics, Volume 42, Issue 4](https://dl.acm.org/toc/tog/2023/42/4).},
-  award_name = {Selected in Technical Papers Trailer and Journal Cover}
+  award_name = {Selected}
 }
 
 @article{10.1145/3478513.3480493,
@@ -45,5 +45,5 @@
   abbr       = {SIGGRAPH Asia},
   preview    = {10.1145_3478513_3480493.jpg},
   award      = {Video clips of the paper were selected in [SIGGRAPH Asia 2021 Technical Papers Trailer](https://www.youtube.com/watch?v=tXBKYMjbH1k).},
-  award_name = {Selected in Technical Papers Trailer}
+  award_name = {Selected}
 }
